k8s/[name]-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: [name]-service
  namespace: submodule-template    
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    app: [name]
  type: NodePort
