k8s/[name]-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: [name]-ingress
  namespace: submodule-template  
  annotations:
    ingress.bluemix.net/rewrite-path: "serviceName=[backend_name]-service rewrite=/"
spec:
  rules:
  - host: sample.react.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: [name]-service
          servicePort: 80
      - path: /api/
        backend:
          serviceName: [backend_name]-service
          servicePort: 3005
